--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@repo/ui": "workspace:*",
+    "framer-motion": "^12.16.0",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "three": "^0.177.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -22,7 +28,11 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "@types/three": "^0.177.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "3.4.17",
     "typescript": "5.8.2"
   }
 }
